# zi-quant-platform

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  alert_messages.py  daily_run_artifacts.py  daily_run_command.py  daily_run_plan.py  daily_run_summary.py  data_gaps.py  db.py  execution_guard.py  experiment_records.py  factors.py  failure_policy.py  file_notifications.py  main.py  market_data.py  mini_backtest.py  models.py  notification_channels.py  ops_checklist.py  ops_runbook.py  paper_daily_cycle.py  paper_ledger.py  paper_review.py  paper_risk.py  paper_snapshots.py  paper_state_store.py  parameter_search.py  performance_metrics.py  portfolio_backtest.py  price_providers.py  production_checks.py  promotion_gate.py  rebalance_plan.py  recommendations.py  report_archive.py  report_index.py  run_health.py  run_history.py  run_request.py  run_result.py  (+7 more)
migrations/: env.py
scripts/: __init__.py  chapter_examples.py  check_migrations.py  db_backup.py  production_smoke.py  run_due_jobs.py
tests/: test_alert_messages.py  test_chapter_examples.py  test_daily_run_artifacts.py  test_daily_run_command.py  test_daily_run_plan.py  test_daily_run_summary.py  test_data_gaps.py  test_db_backup.py  test_execution_guard.py  test_experiment_records.py  test_factors.py  test_failure_policy.py  test_file_notifications.py  test_market_data.py  test_mini_backtest.py  test_notification_channels.py  test_ops_checklist.py  test_ops_runbook.py  test_paper_daily_cycle.py  test_paper_ledger.py  test_paper_review.py  test_paper_risk.py  test_paper_snapshots.py  (+23 more)
(+6 files in other folders)
